# Swarm-tracking

./: CMakeLists.txt  README.md  compile.sh  foraging.argos  foraging.txt  swarm_tracking.argos
footbot_foraging/: footbot_foraging.cpp  footbot_foraging.h
footbot_tracking/: CMakeLists.txt  footbot_tracking.cpp  footbot_tracking.h
foraging_loop_functions/: foraging_loop_functions.cpp  foraging_qt_user_functions.cpp
loop_functions/: CMakeLists.txt  foraging_qt_user_functions.cpp  loop_functions.cpp  loop_functions.h
